# customer_comm

./: MANIFEST.in  README.md  pyproject.toml  setup.py
customer_comm/: hooks.py  modules.txt
customer_comm/customer_comm/page/customer_journey/: customer_journey.html  customer_journey.js  customer_journey.json  customer_journey.py
customer_communication/: hooks.py  modules.txt
